--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roupa da Marca</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         
         .whatsapp-button {
@@ -41,7 +41,7 @@
         </nav>
     </header>
     <div class="container">
-        <img src="/images/logo.PNG" alt="Logo da empresa Roupa da Marca">
+        <img src="./images/logo.PNG" alt="Logo da empresa Roupa da Marca">
     </div>
     
 
@@ -66,19 +66,19 @@
 <h6 class="produto-nome">Calcoes azul masculino</h6>
 <h6 class="produto-preco">Preço: 420Mzn</h6>
 <button class="produto-comprar">Comprar</button><br>
-<img src="/images/roupas/calcoes/calcoes m1.jpg" alt="Camisa polo azul masculina" title="Camisa polo azul masculina - Tecido leve e confortável">
+<img src="./images/roupas/calcoes/calcoes m1.jpg" alt="Camisa polo azul masculina" title="Camisa polo azul masculina - Tecido leve e confortável">
 <hr>
 <!-- TCAlcoes -->
 <h6 class="produto-nome">Calcoes masculino</h6>
 <h6 class="produto-preco">Preço: 300Mzn</h6>
 <button class="produto-comprar">Comprar</button><br>
-<img src="/images/roupas/calcoes/cacoes m2.jpg" alt="Terno preto masculino" title="Terno preto masculino - Corte slim fit">
+<img src="./images/roupas/calcoes/cacoes m2.jpg" alt="Terno preto masculino" title="Terno preto masculino - Corte slim fit">
 <hr>
 <!-- Calcoes -->
 <h6 class="produto-nome">Calcoes azul masculino</h6>
 <h6 class="produto-preco">Preço: 500Mzn</h6>
 <button class="produto-comprar">Comprar</button><br>
-<img src="/images/roupas/calcoes/calcoes m3.jpg" alt="Calça jeans escura masculina" title="Calça jeans escura masculina - Corte reto e confortável">
+<img src="./images/roupas/calcoes/calcoes m3.jpg" alt="Calça jeans escura masculina" title="Calça jeans escura masculina - Corte reto e confortável">
 <hr>
 <!-- Calcoes -->
 <h6 class="produto-nome">Calcoes azul masculino</h6>
